# taomni

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  TERMINAL_APPEARANCE_PLAN.md  TERMINAL_EXPERIENCE_PLAN.md  ai-native-plan.md  ai-native-test-1.html  db-connection-foundation.md  db-export-result-plan.md  db-redis-client-ui.md  db-sql-client-ui.md  feature-list.md  feature-servers-design.md  frontend-lib-upgrade-1.md  hbase-client-ui-plan.md  index.html  ipc-improve-plan.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  qa-ui-auto.config.smoke.yaml  rdp-plan.md  replit.md  replit.nix  roadmap.md  rust-lib-upgrade-1.md  rust_rdp_server_dev_plan.md  rust_rdp_server_feature_dev_task.md  session-import-202605-1.md  session-import-export.md  tao-notes-feature-plan.md  testcase-for-auto.md  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  (+1 more)
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.sockscap.linux.conf.json  tauri.sockscap.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/platform/sockscap/: performance-release-manifest.template.json
src-tauri/platform/sockscap/linux/: com.taomni.sockscap.policy  release-manifest.template.json  release-policy.json
src-tauri/platform/sockscap/macos/: TaomniSockscap.release.entitlements.plist  TaomniTransparentProxyProvider-Info.plist  release-manifest.template.json  release-policy.json
src-tauri/platform/sockscap/windows/: release-manifest.template.json  release-policy.json
src-tauri/resources/: models.manifest.json
src-tauri/resources/macos-provider/: README.md  SockscapTransparentProxyProvider.swift
src-tauri/resources/sockscap/linux/: README.md
src-tauri/resources/sockscap/windows/: .gitignore  README.md
src-tauri/resources/windivert/: README.md
src-tauri/src/: appearance.rs  git.rs  history.rs  lib.rs  local_history.rs  lsp.rs  main.rs  migrate.rs  perf.rs  state.rs  update.rs  workspace.rs  workspace_fs.rs  workspace_search.rs
src-tauri/src/agent/: cmd_classify.rs  commands.rs  context.rs  mcp_server.rs  mod.rs  safety.rs  sql_classify.rs  tool_runtime.rs
src-tauri/src/agent/acp_bridge/: commands.rs  config.rs  mod.rs  presets.rs  process.rs  protocol.rs  thread.rs
src-tauri/src/agent/capture/: exec_b.rs  exec_c.rs  mod.rs  reduce.rs
src-tauri/src/agent/cc_bridge/: commands.rs  config.rs  mcp_control.rs  mcp_http.rs  mcp_redis.rs  mcp_sql.rs  mod.rs  permissions_mcp.rs  process.rs  protocol.rs  session_card.rs  tools_mcp.rs
src-tauri/src/agent/codex_bridge/: commands.rs  config.rs  mod.rs  process.rs  protocol.rs
src-tauri/src/agent/local/: adapters.rs  mod.rs  types.rs
src-tauri/src/agent/mcp_bridge/: mod.rs
src-tauri/src/agent/search/: brave.rs  commands.rs  exa.rs  google_cse.rs  instances.rs  key_storage.rs  mod.rs  searxng.rs  serper.rs  tavily.rs
src-tauri/src/agent/tools/: history.rs  mod.rs  rig_native.rs  (+5 more)
src-tauri/src/ai/: commands.rs  config.rs  mod.rs  network_policy.rs  session_safety.rs  shell_prompt.rs  shell_safety.rs  tools_shell.rs
src-tauri/src/asr/: manager.rs  mod.rs  sherpa_onnx.rs  sherpa_onnx_real.rs
src-tauri/src/chat/: acp.rs  inline_qq.rs  mod.rs  redact.rs  run.rs  store.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: bookmarks.rs  clickhouse.rs  forward.rs  history.rs  mod.rs  oracle.rs  panwei.rs  presto.rs  redis_ops.rs  sql.rs  sql_rewrite.rs
src-tauri/src/filebrowser/: local.rs  mod.rs  sftp.rs  transfer.rs
src-tauri/src/hbase/: mod.rs
src-tauri/src/lanchat/: beacon.rs  commands.rs  discovery.rs  identity.rs  keystore.rs  messaging.rs  mod.rs  protocol.rs  store.rs  swarm.rs  tls.rs  transfer.rs  transport.rs
src-tauri/src/llm/: anthropic.rs  gpu_detect.rs  llama_server.rs  mod.rs  openai_compat.rs  router.rs
src-tauri/src/mail/: mod.rs
src-tauri/src/models/: downloader.rs  manifest.rs  mod.rs  store.rs
src-tauri/src/notes/: commands.rs  db.rs  mod.rs
src-tauri/src/objectstorage/: azure.rs  config.rs  credentials.rs  mod.rs  s3.rs  session.rs  transfer.rs  types.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/rdp/: cliprdr.rs  frame.rs  input.rs  mod.rs  rdpdr.rs  rdpsnd.rs  rfx.rs  session.rs  transport.rs  ws.rs
src-tauri/src/sdk/: detect.rs  mod.rs  probe.rs  resolve.rs  runtime.rs
src-tauri/src/servers/: cron.rs  db.rs  engine.rs  ftp.rs  http.rs  iperf.rs  mod.rs  nfs.rs  process.rs  rdp.rs  ssh.rs  telnet.rs  tftp.rs  vnc.rs
src-tauri/src/session/: db.rs  import.rs  mod.rs  models.rs
src-tauri/src/sockscap/: attribution.rs  autoproxy.rs  capabilities.rs  capability.rs  capture.rs  commands.rs  config.rs  conflict.rs  db.rs  dns_win.rs  download.rs  egress.rs  elevate.rs  engine.rs  flow.rs  helper.rs  known_hosts.rs  listener.rs  matcher.rs  mod.rs  model.rs  orchestrator.rs  packet.rs  paths.rs  platform.rs  policy.rs  preflight.rs  process.rs  processes.rs  recovery.rs  relay.rs  runtime.rs  ssh_pool.rs  stats.rs  storage.rs  transparent.rs  tray.rs  types.rs  windivert.rs  windows_capture.rs  (+3 more)
src-tauri/src/tab/: fim_engine.rs  fim_engine_real.rs  mod.rs  path_scanner.rs
src-tauri/src/terminal/: client.rs  forwards.rs  hostkey.rs  mod.rs  network.rs  pty.rs  shell_integration.rs  ssh.rs  ssh_pool.rs  x11.rs  x11_forward.rs
src-tauri/src/tunnel/: mod.rs
src-tauri/src/vault/: crypto.rs  db.rs  mod.rs  tests.rs
src-tauri/src/vnc/: clipboard.rs  encodings.rs  mod.rs  rfb.rs  ws.rs
src-tauri/src/voice/: capture.rs  commands.rs  mod.rs
src-tauri/src/windowing/: mod.rs
src-tauri/src/wsl/: mod.rs
src-tauri/tests/: README.md  acp_runtime.rs  asr_llm_isolation.rs  cloud_only_smoke.rs  concurrent_three_workloads.rs  fim_latency.rs  gpu_detect.rs  models_downloader.rs  network_policy.rs  perf_baseline.rs  router_routing.rs  router_vault_lock.rs  sockscap_win11_scenarios.rs  three_source_probe.rs  voice_intent_latency.rs
src-tauri/tests/support/: acp_fake_agent.rs  mock_provider.rs
src-tauri/thrift/: README.md
(+940 files in other folders)
