[package]
name = "newmob"
version = "0.1.0"
description = "Cross-platform remote connection manager"
authors = ["engcapa"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "newmob_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
portable-pty = "0.8"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
heck = "0.5"
regex = "1"
rig-core = { version = "=0.37.0", default-features = false, features = ["derive"] }
urlencoding = "2"
url = "2"
which = "6"
shellexpand = "3"
libc = "0.2"
font-kit = "0.14"
dirs = "5"
flate2 = "1"
tungstenite = "0.24"
tokio-tungstenite = "0.24"
ironrdp = { version = "0.14.0", features = ["core", "connector", "session", "graphics", "input", "cliprdr", "rdpdr", "rdpsnd", "svc", "dvc", "displaycontrol", "server", "acceptor"] }
ironrdp-tls = { version = "0.2.0", features = ["rustls"] }
ironrdp-tokio = { version = "0.8.0", features = ["reqwest-rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# RDP server (servers/rdp.rs): self-signed TLS cert + cross-platform input injection.
rcgen = "0.13"
# Input injection for the RDP server. Use the pure-Rust `x11rb` backend (not the
# default `xdo`, which needs the libxdo C library) and the `wayland` backend so
# Wayland sessions work without extra system deps. Both features are Linux-only
# inside enigo; Windows/macOS use their native backends regardless.
enigo = { version = "0.3", default-features = false, features = ["x11rb", "wayland"] }
# RDP server display updates carry pixel data as `bytes::Bytes` (ironrdp-server API).
bytes = "1"
anyhow = "1"
aes = "0.8"
cbc = "0.1"
des = "0.8"
generic-array = "0.14"
rsa = "0.9"
sha2 = "0.10"
sha1 = "0.10"
rand = "0.8"
pbkdf2 = "0.12"
hex = "0.4"
serde_yaml = "0.9"
x509-cert = "0.2"
arboard = "3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
keyring = "3"
hound = "3.5"
cpal = { version = "0.15", optional = true }
ash = { version = "0.38", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
plist = "1.9"
# Database client backends (MySQL / PostgreSQL via sqlx, Redis via redis-rs,
# ClickHouse via the existing reqwest HTTP client). Values are returned to the
# frontend as strings, so no decimal/bigdecimal type features are required.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "bigdecimal", "uuid", "json"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "streams"] }

[features]
default = []
voice-capture = ["dep:cpal"]
asr-sherpa-onnx = []
vulkan-detect = ["dep:ash"]
local-llm-fim = ["dep:llama-cpp-2"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "commdlg", "shellapi", "winbase", "winuser"] }
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
# RDP server X11 screen capture (XShm / MIT-SHM via libxcb) plus the DAMAGE
# extension for event-driven, region-cropped capture (only the rectangles the
# X server reports as changed are read back and encoded — see capture/x11.rs).
# The `damage` feature transitively enables `xfixes`, which provides the
# `xfixes::Region` type that `damage_subtract` takes.
x11rb = { version = "0.13", features = ["shm", "damage"] }

[dev-dependencies]
tempfile = "3"
