[package]
name = "taomni"
version = "0.2.8"
description = "AI-native remote workspace for developers"
authors = ["engcapa"]
license = "MIT"
edition = "2021"
rust-version = "1.94"

[lib]
name = "taomni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
portable-pty = "0.9"
base64 = "0.22"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
russh = { version = "0.61", features = ["async-trait"] }
russh-sftp = "2.3"
tokio-util = { version = "0.7", features = ["compat", "io"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "2"
reqwest = { version = "0.13", features = ["rustls", "json", "stream", "query"], default-features = false }
heck = "0.5"
regex = "1"
rig-core = { version = "=0.38.1", default-features = false, features = ["derive"] }
urlencoding = "2"
url = "2"
which = "8"
shellexpand = "3"
libc = "0.2"
font-kit = "0.14"
dirs = "6"
flate2 = "1"
tungstenite = "0.29"
tokio-tungstenite = "0.29"
ironrdp = { version = "0.15.0", features = ["core", "connector", "session", "graphics", "input", "cliprdr", "rdpdr", "rdpsnd", "svc", "dvc", "displaycontrol", "server", "acceptor"] }
ironrdp-tls = { version = "0.2.1", features = ["rustls"] }
ironrdp-tokio = { version = "0.9.0", features = ["reqwest-rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# RDP server (servers/rdp.rs): self-signed TLS cert + cross-platform input injection.
rcgen = "0.14"
# Input injection for the RDP server. Use the pure-Rust `x11rb` backend (not the
# default `xdo`, which needs the libxdo C library) and the `wayland` backend so
# Wayland sessions work without extra system deps. Both features are Linux-only
# inside enigo; Windows/macOS use their native backends regardless.
enigo = { version = "0.6", default-features = false, features = ["x11rb", "wayland"] }
# RDP server display updates carry pixel data as `bytes::Bytes` (ironrdp-server API).
bytes = "1"
anyhow = "1"
aes = "0.9"
cbc = "0.2"
des = "0.9"
generic-array = "1"
rsa = "0.9"
sha2 = "0.11"
sha1 = "0.11"
rand = "0.10"
pbkdf2 = "0.13"
hex = "0.4"
serde_yml = "0.0.13"
arboard = "3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
keyring = "4"
keyring-core = "1"
cpal = { version = "0.17", optional = true }
ash = { version = "0.38", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
plist = "1.9"
# Database client backends (MySQL / PostgreSQL via sqlx, Redis via redis-rs,
# ClickHouse via the existing reqwest HTTP client). Values are returned to the
# frontend as strings, so no decimal/bigdecimal type features are required.
sqlx-core = { version = "0.9", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "bigdecimal", "uuid", "json"] }
sqlx-mysql = { version = "0.9", default-features = false, features = ["chrono", "bigdecimal", "uuid", "json"] }
sqlx-postgres = { version = "0.9", default-features = false, features = ["chrono", "bigdecimal", "uuid", "json"] }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "streams"] }
# Native HBase RPC client (hbase/native): protobuf wire types via prost,
# big-endian frame codecs via byteorder, and ZooKeeper bootstrap for region
# discovery. Replaces the REST/Stargate dependency so we can talk to clusters
# that only expose the native RegionServer/Master RPC ports.
prost = "0.14"
prost-types = "0.14"
byteorder = "1"
zookeeper-client = { version = "0.11", features = ["tokio"] }
# Cross-platform GSSAPI/Kerberos for native HBase secure (kerberos) auth. Behind
# the `hbase-kerberos` feature so the default build needs no system GSSAPI libs.
cross-krb5 = { version = "0.5", optional = true }

[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }
picky = { path = "vendor/picky" }
picky-krb = { path = "vendor/picky-krb" }
portable-pty = { path = "vendor/portable-pty" }
sspi = { path = "vendor/sspi" }
winscard = { path = "vendor/winscard" }

[features]
default = []
voice-capture = ["dep:cpal"]
asr-sherpa-onnx = []
vulkan-detect = ["dep:ash"]
local-llm-fim = ["dep:llama-cpp-2"]
hbase-kerberos = ["dep:cross-krb5"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "commdlg", "shellapi", "winbase", "winuser"] }
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
# RDP server X11 screen capture (XShm / MIT-SHM via libxcb) plus the DAMAGE
# extension for event-driven, region-cropped capture (only the rectangles the
# X server reports as changed are read back and encoded — see capture/x11.rs).
# The `damage` feature transitively enables `xfixes`, which provides the
# `xfixes::Region` type that `damage_subtract` takes.
x11rb = { version = "0.13", features = ["shm", "damage"] }

[dev-dependencies]
tempfile = "3"
