[package]
name = "taomni"
version = "0.3.0"
description = "AI-native remote workspace for developers"
authors = ["engcapa"]
license = "MIT"
edition = "2024"
rust-version = "1.94"
# Required once [[bin]] acp-fake-agent exists: otherwise `cargo run` /
# `cargo tauri dev` cannot pick between taomni and acp-fake-agent.
default-run = "taomni"

[lib]
name = "taomni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "acp-fake-agent"
path = "tests/support/acp_fake_agent.rs"
test = false
bench = false

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.14"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
# In-app auto-update: pull signed bundles from GitHub Releases (see
# claudedocs/auto-update-plan.md). `process` provides relaunch() after install.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
portable-pty = "0.9"
base64 = "0.22"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
russh = { version = "0.61", features = ["async-trait"] }
russh-sftp = "2.3"
tokio-util = { version = "0.7", features = ["compat", "io", "codec"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
# Claude Code agent bridge (agent/cc_bridge/mcp_http.rs): the official Rust MCP
# SDK. We run an in-app Streamable-HTTP MCP server that CC connects to via its
# `.mcp.json` `type:"http"` entry. axum hosts the rmcp tower service + a Bearer
# auth layer; schemars derives the tool input/output JSON schemas. Versions are
# already in the tree (tower 0.5 / http 1 / hyper 1 / schemars 1) — additive.
rmcp = { version = "1", features = ["server", "client", "transport-streamable-http-server", "transport-streamable-http-client-reqwest", "reqwest", "macros"] }
axum = "0.8"
schemars = "1"
thiserror = "2"
reqwest = { version = "0.13", features = ["rustls", "json", "stream", "query", "socks", "blocking"], default-features = false }
heck = "0.5"
regex = "1"
# Code Workspace Find in Files. These are the same traversal and matching
# primitives used by ripgrep, including gitignore support and binary detection.
ignore = "0.4"
grep-matcher = "0.1"
grep-regex = "0.1"
grep-searcher = "0.1"
# Pure-Rust jq engine for the `read_capture` `jq` op — no external `jq` binary,
# so it works on the Windows Taomni host too. Versions are mutually compatible
# (the embedding chains defs/funs from all three; see agent/capture/reduce.rs).
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = "2.0.1"
rig-core = { version = "=0.38.1", default-features = false, features = ["derive"] }
urlencoding = "2"
url = "2"
which = "8"
shellexpand = "3"
libc = "0.2"
font-kit = "0.14"
dirs = "6"
flate2 = "1"
tungstenite = "0.29"
tokio-tungstenite = "0.29"
imap = "2.4.1"
lettre = "0.11.22"
mail-parser = { version = "0.11.4", features = ["full_encoding"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
ironrdp = { version = "0.15.0", features = ["core", "connector", "session", "graphics", "input", "cliprdr", "rdpdr", "rdpsnd", "svc", "dvc", "displaycontrol", "server", "acceptor"] }
ironrdp-tls = { version = "0.2.1", features = ["rustls"] }
ironrdp-tokio = { version = "0.9.0", features = ["reqwest-rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
# RDP server (servers/rdp.rs): self-signed TLS cert + cross-platform input injection.
rcgen = "0.14"
# LanChat (lanchat/tls.rs): async rustls adapter to upgrade the P2P TCP control
# channel to mutual TLS over tokio streams.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
# Input injection for the RDP server. Use the pure-Rust `x11rb` backend (not the
# default `xdo`, which needs the libxdo C library) and the `wayland` backend so
# Wayland sessions work without extra system deps. Both features are Linux-only
# inside enigo; Windows/macOS use their native backends regardless.
enigo = { version = "0.6", default-features = false, features = ["x11rb", "wayland"] }
# RDP server display updates carry pixel data as `bytes::Bytes` (ironrdp-server API).
bytes = "1"
anyhow = "1"
aes = "0.9"
cbc = "0.2"
des = "0.9"
blowfish = "0.10"
bcrypt-pbkdf = "0.11"
generic-array = "1"
rsa = "0.9"
sha2 = "0.11"
sha1 = "0.11"
rand = "0.10"
pbkdf2 = "0.13"
hex = "0.4"
serde_yml = "0.0.13"
arboard = "3"
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }
keyring = "4"
keyring-core = "1"
cpal = { version = "0.17", optional = true }
# LanChat native A/V stack (lanchat/media, behind the `native-av` feature): Opus
# audio (audiopus → vendored libopus via cc, no nasm) and software H.264
# (openh264 → Cisco's BSD encoder/decoder built from source; needs nasm for its
# x86 asm). Self-contained — no system ffmpeg/gstreamer. Linux-first per the
# native-AV plan; the deps themselves are cross-platform.
audiopus = { version = "0.3.0-rc.0", optional = true }
openh264 = { version = "0.9", optional = true }
# Camera capture for the native A/V stack (Linux: v4l2 via the `v4l` crate, which
# uses raw videodev2 ioctls — no libv4l system dep). input-native picks the
# platform backend; we only drive it on Linux.
nokhwa = { version = "0.10", optional = true, default-features = false, features = ["input-native"] }
ash = { version = "0.38", optional = true }
llama-cpp-2 = { version = "0.1", optional = true }
plist = "1.9"
# Database client backends (MySQL / StarRocks / PostgreSQL via sqlx, PanWeiDB
# via the native openGauss connector, Oracle via rust-oracle/ODPI-C, SQL Server
# via tiberius, Redis via redis-rs, ClickHouse via the existing reqwest HTTP
# client). Values are decoded to frontend strings while preserving common
# database-native numeric, UUID, JSON and time types where the driver exposes
# them.
sqlx-core = { version = "0.9", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-webpki", "chrono", "bigdecimal", "uuid", "json"] }
sqlx-mysql = { version = "0.9", default-features = false, features = ["chrono", "bigdecimal", "uuid", "json"] }
sqlx-postgres = { version = "0.9", default-features = false, features = ["chrono", "bigdecimal", "uuid", "json"] }
tokio-opengauss = "0.1"
oracle = { version = "0.6.3", features = ["chrono"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "chrono", "bigdecimal"] }
redis = { version = "1.2", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "streams"] }
# Native HBase RPC client (hbase/native): protobuf wire types via prost,
# big-endian frame codecs via byteorder, and ZooKeeper bootstrap for region
# discovery. Replaces the REST/Stargate dependency so we can talk to clusters
# that only expose the native RegionServer/Master RPC ports.
prost = "0.14"
prost-types = "0.14"
byteorder = "1"
zookeeper-client = { version = "0.11", features = ["tokio"] }
# Aliyun Lindorm / HBase 增强版 Thrift2-over-HTTP backend (hbase/thrift): the
# Apache Thrift Rust runtime (protocol + transport traits). The THBaseService
# bindings are pre-generated from the official IDL and committed under
# src/hbase/thrift/idl.rs, so no thrift compiler is needed at build time.
thrift = "0.17"
# Cross-platform GSSAPI/Kerberos for native HBase secure (kerberos) auth. Behind
# the `hbase-kerberos` feature so the default build needs no system GSSAPI libs.
cross-krb5 = { version = "0.5", optional = true }
rusty-s3 = "0.9.1"
quick-xml = { version = "0.40.1", features = ["serialize"] }
jiff = "0.2"
hmac = "0.13.0"
mdns-sd = "0.20.0"
if-addrs = "0.15.0"
socket2 = { version = "0.6", features = ["all"] }
tauri-plugin-notification = "2.3.3"
xcap = { version = "0.9.6", optional = true }
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.7.1"
sqlparser = "0.62.0"

[patch.crates-io]
ironrdp-connector = { path = "vendor/ironrdp-connector" }
picky = { path = "vendor/picky" }
picky-krb = { path = "vendor/picky-krb" }
portable-pty = { path = "vendor/portable-pty" }
sspi = { path = "vendor/sspi" }
tauri-utils = { path = "vendor/tauri-utils" }
winscard = { path = "vendor/winscard" }

[features]
default = ["hbase-kerberos"]
voice-capture = ["dep:cpal"]
screen-capture = ["dep:xcap"]
# LanChat native A/V transport (Linux / no-WebRTC stack). Pulls in cpal (mic
# capture), audiopus (Opus) and openh264 (H.264). Off by default; enable for
# Linux desktop bundles that need native voice/video. See
# claudedocs/lanchat-linux-native-av-transport.md.
native-av = ["dep:cpal", "dep:audiopus", "dep:openh264", "dep:nokhwa"]
asr-sherpa-onnx = []
vulkan-detect = ["dep:ash"]
local-llm-fim = ["dep:llama-cpp-2"]
hbase-kerberos = ["dep:cross-krb5"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "commdlg", "shellapi", "winbase", "winuser"] }
winreg = "0.55"

[target.'cfg(target_os = "linux")'.dependencies]
# RDP server X11 screen capture (XShm / MIT-SHM via libxcb) plus the DAMAGE
# extension for event-driven, region-cropped capture (only the rectangles the
# X server reports as changed are read back and encoded — see capture/x11.rs).
# The `damage` feature transitively enables `xfixes`, which provides the
# `xfixes::Region` type that `damage_subtract` takes.
x11rb = { version = "0.13", features = ["shm", "damage"] }
# Linux WebView (webkit2gtk) media stack. The default webkit2gtk settings ship
# with media-stream / WebRTC disabled, so navigator.mediaDevices.getUserMedia
# and getDisplayMedia reject — breaking LanChat voice/video calls and screen
# share on Linux (Windows/WebView2 has them on by default). We flip the settings
# and allow UserMedia permission requests in lib.rs via window.with_webview.
# Pinned to the exact version wry resolves so PlatformWebview::inner()'s
# `webkit2gtk::WebView` type matches; `v2_38` exposes set_enable_webrtc (and
# transitively v2_4's set_enable_media_stream / set_enable_mediasource).
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }

[dev-dependencies]
tempfile = "3"
